--- a/index.html
+++ b/index.html
@@ -14,24 +14,25 @@
             <div class="previous-operand"></div>
             <div class="curent-operand"></div>
         </div>
-    </div>
-    <button class="span-two">AC</button>
-    <button>DEL</button>
-    <button>1</button>
-    <button>2</button>
-    <button>3</button>
-    <button>*</button>
-    <button>4</button>
-    <button>5</button>
-    <button>6</button>
-    <button>+</button>
-    <button>7</button>
-    <button>8</button>
-    <button>9</button>
-    <button>-</button>
-    <button>.</button>
-    <button>0</button>
+        <button class="span-two">AC</button>
+        <button>DEL</button>
+        <button>÷</button>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>*</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>+</button>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>-</button>
+        <button>.</button>
+        <button>0</button>
     <button class="span-two">=</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
